<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/auth_nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.beta.safalya_v2.auth.LoginFragment"
        android:label="@string/title_login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.beta.safalya_v2.auth.RegisterFragment"
        android:label="@string/title_register">
        <action
            android:id="@+id/action_registerFragment_to_roleSelectionFragment"
            app:destination="@id/roleSelectionFragment" />
    </fragment>

    <fragment
        android:id="@+id/roleSelectionFragment"
        android:name="com.beta.safalya_v2.auth.RoleSelectionFragment"
        android:label="@string/title_select_role" />
</navigation>

